objects/VonageMessagingHistory__c.object
<CustomObject>
    <description>MessagingHistory</description>
    <fields>
        <fullName>BrandPhoneNumber__c</fullName>
        <description>BrandPhoneNumber</description>
        <label>BrandPhoneNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <description>sms or whatsapp</description>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>sms</fullName>
                </value>
                <value>
                    <fullName>whatsapp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactPhoneNumber__c</fullName>
        <description>Contact phone number</description>
        <label>ContactPhoneNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <description>body of the message</description>
        <label>Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Date_Time__c</fullName>
        <label>Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Direction__c</fullName>
        <label>Direction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>out</fullName>
                </value>
                <value>
                    <fullName>in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastMessageStateTime__c</fullName>
        <label>LastMessageStateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastMessageState__c</fullName>
        <description>LastMessageState : Submitted, Delivered, Read</description>
        <label>LastMessageState</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MessagingConversation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>MessagingConversation</description>
        <label>MessagingConversation</label>
        <referenceTo>VonageMessagingConversation__c</referenceTo>
        <relationshipLabel>MessagingHistory</relationshipLabel>
        <relationshipName>MessagingHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VonageMsgId__c</fullName>
        <description>Vonage Message ID</description>
        <externalId>true</externalId>
        <label>VonageMsgId</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <label>MessagingHistory</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MessagingHistory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MessagingHistory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>